--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -9,7 +9,8 @@
     <meta name="author" content="Homolka Lihm " />
 
     <title>Hotely</title>
-
+<link rel="stylesheet" type="text/css" media="all" 
+          href="../../resources/css/Custom.css" th:href="@{/resources/css/Custom.css}" />
 	<link rel="stylesheet" type="text/css" media="all" 
           href="../../resources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
     
@@ -23,8 +24,9 @@
           href="../../resources/css/dropzone.min.css" th:href="@{/resources/css/dropzone.min.css}" />           
           
           <link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />                  
-    
+          href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />  
+          
+          <link  href="../../reources/css/fotorama.css" th:href="@{/resources/css/fotorama.css}" rel="stylesheet" />                
   </head>		
 
   <body>
