Registration form, main page, character encoding, other improvements

--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -10,6 +10,19 @@
 
 
     <div class="container">
+    <div class="row">
+    <div class="jumbotron">
+    <h1 class="text-center">Český hotel</h1>
+
+	<p class="text-center"><a class="btn btn-primary btn-lg" th:href="@{/hotels(page=1,size=1)}" role="button">Prohlédnout si hotely</a></p>
+    <p class="text-center"><a class="btn btn-primary btn-lg" th:href="@{/hotels(page=1,size=1)}" role="button">Prohlédnout si hotely</a></p>
+
+</div>
+    
+    </div>
+    
+    
+    
 
         <!-- Introduction Row -->
         <div class="row">
