--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -9,8 +9,6 @@
     <meta name="author" content="Homolka Lihm " />
 
     <title>Hotely</title>
-<link rel="stylesheet" type="text/css" media="all" 
-          href="../../resources/css/Custom.css" th:href="@{/resources/css/Custom.css}" />
 	<link rel="stylesheet" type="text/css" media="all" 
           href="../../resources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
     
@@ -37,13 +35,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" th:href="@{/}">Český hotel</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -58,8 +50,33 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
+                <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
+                    
+                    		<form th:action="@{/logout}" method="post" id="logoutForm">
+			<input type="hidden" name="${_csrf.parameterName}"
+				value="${_csrf.token}" />
+		</form>
+		<script>
+			function formSubmit() {
+				document.getElementById("logoutForm").submit();
+			}
+		</script>
+		<li>
+                        <a sec:authentication="name" href="#">Ahoj</a>
+                        </li> <li>
+                        <a href="javascript:formSubmit()"> Logout</a>
+                    </li>
+                    </ul>
+                    <ul sec:authorize="isAnonymous()" class="nav navbar-nav navbar-right">
+                    <li>
+                        <a th:href="@{/registration}">Registrovat</a>
+                    </li><li>
+                        <a th:href="@{/login}">Přihlásit</a>
+                    </li>
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
+            
         </div>
         <!-- /.container -->
     </nav>
