--- a/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -24,7 +24,9 @@
 	<script type="text/javascript" th:src="@{/resources/js/bootstrap.min.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/js/star-rating.min.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/js/fotorama.js}"></script>
-
+	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-all.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/bootstrap-table-cs-CZ.min.js}"></script>
+	
 	</div>
 </body>
 
