--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -24,6 +24,9 @@
           <link rel="stylesheet" type="text/css" media="all" 
           href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />  
           
+          <link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/bootstrap-table.min.css" th:href="@{/resources/css/bootstrap-table.min.css}" />  
+          
           <link  href="../../reources/css/fotorama.css" th:href="@{/resources/css/fotorama.css}" rel="stylesheet" />                
   </head>		
 
